--- a/car.html
+++ b/car.html
@@ -16,7 +16,7 @@ sitemap: true
 
 				<!-- Moving car on scroll
 				============================================= -->
-				<div class="section notopmargin clearfix" style="padding: 100px 0">
+				<div class="section notopmargin clearfix" style="padding: 100px 0; margin: 0;">
 					<div class="running-car topmargin-sm">
 						<img class="car" src="{{ site.url }}/car/assets/media/moving-car/car.jpg" alt="">
 						<img class="wheel" src="{{ site.url }}/car/assets/media/moving-car/car-tier.png" alt="">
@@ -95,6 +95,11 @@ sitemap: true
 
 				<div class="section nomargin">
 					<div class="container">
+
+						<div class="heading-block nobottomborder center">
+							<h2 class="nott ls0" style="font-size: 44px; line-height: 1.2">DỊCH VỤ 5*</h2>
+						</div>
+
 						<div class="row py-5 clearfix">
 							<div class="col-md-4 mb-md-3 mb-5">
 								<div class="feature-box fbox-plain">
@@ -210,7 +215,7 @@ sitemap: true
 				<div class="section nomargin nobg clearfix" style="padding: 100px 0;">
 					<div class="container clearfix">
 						<div class="heading-block center">
-							<div class="before-heading uppercase ls1" style="font-size: 13px; font-style: normal;"></div>
+							<div class="before-heading uppercase ls1" style="font-size: 44px; font-style: normal;"></div>
 							<h3 class="t700">Sản phẩm mới 2019</h3>
 						</div>
 
