--- a/car.html
+++ b/car.html
@@ -159,6 +159,46 @@ sitemap: true
 					</div>
 				</div>
 
+				<!-- Counter Area
+				============================================= -->
+				<div class="section counter-section nomargin dark clearfix">
+					<div class="container clearfix common-height">
+						<div class="row">
+							<div class="col-lg-3 col-md-6 center">
+								<div>
+									<i class="i-plain i-large divcenter color icon-car-fulltime"></i>
+									<div class="counter"><span data-from="10" data-to="11365" data-refresh-interval="50" data-speed="1000"></span></div>
+									<h5>Khách hàng hài lòng</h5>
+								</div>
+							</div>
+
+							<div class="col-lg-3 col-md-6 center">
+								<div>
+									<i class="i-plain i-large divcenter color icon-car-money"></i>
+									<div class="counter"><span data-from="10" data-to="534" data-refresh-interval="50" data-speed="700"></span></div>
+									<h5>Xe có sẵn</h5>
+								</div>
+							</div>
+
+							<div class="col-lg-3 col-md-6 center">
+								<div>
+									<i class="i-plain i-large divcenter color icon-car-fan"></i>
+									<div class="counter"><span data-from="10" data-to="54" data-refresh-interval="85" data-speed="1200"></span></div>
+									<h5>Đại lý toàn quốc</h5>
+								</div>
+							</div>
+
+							<div class="col-lg-3 col-md-6 center">
+								<div>
+									<i class="i-plain i-large divcenter color icon-car-fuel2"></i>
+									<div class="counter"><span data-from="10" data-to="7664" data-refresh-interval="30" data-speed="900"></span></div>
+									<h5>Giải thưởng</h5>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div><!-- Counter Area end -->
+
 				<!-- Features Section
 				============================================= -->
 				<!--div class="container clearfix">
@@ -640,47 +680,6 @@ sitemap: true
 				</div> <!-- Video Gallery end -->
 
 
-
-				<!-- Counter Area
-				============================================= -->
-				<div class="section counter-section nomargin dark clearfix">
-					<div class="container clearfix common-height">
-						<div class="row">
-							<div class="col-lg-3 col-md-6 center">
-								<div>
-									<i class="i-plain i-large divcenter color icon-car-fulltime"></i>
-									<div class="counter"><span data-from="10" data-to="11365" data-refresh-interval="50" data-speed="1000"></span></div>
-									<h5>Khách hàng hài lòng</h5>
-								</div>
-							</div>
-
-							<div class="col-lg-3 col-md-6 center">
-								<div>
-									<i class="i-plain i-large divcenter color icon-car-money"></i>
-									<div class="counter"><span data-from="10" data-to="534" data-refresh-interval="50" data-speed="700"></span></div>
-									<h5>Xe có sẵn</h5>
-								</div>
-							</div>
-
-							<div class="col-lg-3 col-md-6 center">
-								<div>
-									<i class="i-plain i-large divcenter color icon-car-fan"></i>
-									<div class="counter"><span data-from="10" data-to="50" data-refresh-interval="85" data-speed="1200"></span></div>
-									<h5>Đại lý toàn quốc</h5>
-								</div>
-							</div>
-
-							<div class="col-lg-3 col-md-6 center">
-								<div>
-									<i class="i-plain i-large divcenter color icon-car-fuel2"></i>
-									<div class="counter"><span data-from="10" data-to="7664" data-refresh-interval="30" data-speed="900"></span></div>
-									<h5>Giải thưởng</h5>
-								</div>
-							</div>
-						</div>
-					</div>
-				</div><!-- Counter Area end -->
-
 				<!-- Featured Section
 				============================================= -->
 				<div class="section nomargin clearfix" style="background: #FFF url('{{ site.url }}/car/assets/media/features/section-bg.jpg') left bottom no-repeat; background-size: cover; padding: 140px 0">
@@ -688,30 +687,30 @@ sitemap: true
 						<div class="row clearfix">
 							<div class="col-lg-6 col-md-9">
 								<div class="heading-block">
-									<h3 style="font-size: 58px; line-height: 56px; letter-spacing: -2px">Our Fleet<br>Your Fleet</h3>
+									<h3 style="font-size: 58px; line-height: 56px; letter-spacing: -2px">LÝ DO NÊN CHỌN<br>TOYOTA THÁI HÒA TỪ LIÊM</h3>
 								</div>
-								<p>Assertively iterate enterprise-wide portals through synergistic products. Efficiently build adaptive schemas after transparent quality vectors. Phosfluorescently optimize competitive resources after extensive convergence. Rapidiously optimize high-quality meta-services via distributed architectures. Credibly deliver 24/365.</p>
+								<p>Là đại lý số 1 của Công ty ô tô Toyota Việt Nam (Toyota Việt Nam) với nhiều thành tích ấn tượng - <strong>TOYOTA THÁI HÒA TỪ LIÊM</strong> luôn đặt mục tiêu làm hài lòng khách hàng lên hàng đầu, liên tục cải tiến để không ngừng nâng cao chất lượng dịch vụ.</p>
 
 								<div class="row topmargin clearfix">
 									<div class="col-md-6">
 										<div class="feature-box fbox-plain media-box">
 											<div class="fbox-icon" style="position: relative;">
-												<a href="#"><i class="icon-car-service2"></i></a>
+												<a href="#"><i class="icon-check"></i></a>
 											</div>
 											<div class="fbox-desc" style="margin-top: 25px">
-												<h3>Skilled Professionals.</h3>
-												<p class="t300" style="color: #666;">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eligendi rem, facilis nobis voluptatum est perspiciatis mollitia.</p>
+												<h3>TIÊU CHUẨN 5* LEXUS THĂNG LONG</h3>
+												<p class="t300" style="color: #666;">Toyota Thái Hòa Từ Liêm Có diện tích và quy mô lớn nhất Việt Nam và Đông Nam Á, với trang bị chuyên dùng đồng bộ đạt chuẩn quốc tế.</p>
 											</div>
 										</div>
 									</div>
 									<div class="col-md-6">
 										<div class="feature-box fbox-plain media-box">
 											<div class="fbox-icon" style="position: relative;">
-												<a href="#"><i class="icon-car-crane"></i></a>
+												<a href="#"><i class="icon-user"></i></a>
 											</div>
 											<div class="fbox-desc" style="margin-top: 25px">
-												<h3>Skilled Professionals.</h3>
-												<p class="t300" style="color: #666;">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eligendi rem, facilis nobis voluptatum est perspiciatis mollitia.</p>
+												<h3>ĐƯỢC PHỤC VỤ BỞI CHUYÊN GIA</h3>
+												<p class="t300" style="color: #666;">Đội ngũ nhân viên bán hàng, kỹ thuật viên, cố vấn dịch vụ chất lượng, chuyên nghiệp của Toyota Thái Hòa bởi được đào tạo bài bản và được cấp chứng chỉ của Toyota Việt Nam.</p>
 											</div>
 										</div>
 									</div>
