--- a/car.html
+++ b/car.html
@@ -256,7 +256,7 @@ sitemap: true
 					<div class="container clearfix">
 						<div class="heading-block center">
 							<div class="before-heading uppercase ls1" style="font-size: 44px; font-style: normal;"></div>
-							<h3 class="t700">Sản phẩm mới 2019</h3>
+							<h3 class="t700" style="font-size: 44px;">Sản phẩm mới 2019</h3>
 						</div>
 
 						<!-- Portfolio Filter
