--- a/car.html
+++ b/car.html
@@ -687,9 +687,9 @@ sitemap: true
 						<div class="row clearfix">
 							<div class="col-lg-6 col-md-9">
 								<div class="heading-block">
-									<h3 style="font-size: 58px; line-height: 56px; letter-spacing: -2px">LÝ DO NÊN CHỌN<br>TOYOTA THÁI HÒA TỪ LIÊM</h3>
+									<h3 style="font-size: 40px; line-height: 56px; letter-spacing: -2px">LÝ DO NÊN CHỌN<br>TOYOTA THÁI HÒA TỪ LIÊM</h3>
 								</div>
-								<p>Là đại lý số 1 của Công ty ô tô Toyota Việt Nam (Toyota Việt Nam) với nhiều thành tích ấn tượng - <strong>TOYOTA THÁI HÒA TỪ LIÊM</strong> luôn đặt mục tiêu làm hài lòng khách hàng lên hàng đầu, liên tục cải tiến để không ngừng nâng cao chất lượng dịch vụ.</p>
+								<p style="text-align: justify;">Là đại lý số 1 của Công ty ô tô Toyota Việt Nam (Toyota Việt Nam) với nhiều thành tích ấn tượng - <strong>TOYOTA THÁI HÒA TỪ LIÊM</strong> luôn đặt mục tiêu làm hài lòng khách hàng lên hàng đầu, liên tục cải tiến để không ngừng nâng cao chất lượng dịch vụ.</p>
 
 								<div class="row topmargin clearfix">
 									<div class="col-md-6">
