--- a/_pages/car/vios.html
+++ b/_pages/car/vios.html
@@ -120,26 +120,22 @@ sitemap: true
 										<table class="table">
 											<thead>
 												<tr>
-													<th scope="col" class="color">Fuel</th>
+													<th scope="col" class="color">Mức tiêu thụ nhiên liệu</th>
 													<th scope="col"></th>
 												</tr>
 											</thead>
 											<tbody>
 												<tr>
-													<td scope="row" class="text-black-50">Fuel consumption* urban:</td>
-													<td class="tright t600">10.9 l/100 km</td>
+													<td scope="row" class="text-black-50">Kết hợp:</td>
+													<td class="tright t600">5.8 l/100 km</td>
 												</tr>
 												<tr>
-													<td scope="row" class="text-black-50">Fuel consumption* non-urban:</td>
-													<td class="tright t600">7.1 l/100 km</td>
+													<td scope="row" class="text-black-50">Trong đô thị:</td>
+													<td class="tright t600">7.3 l/100 km</td>
 												</tr>
 												<tr>
-													<td scope="row" class="text-black-50">Fuel consumption* combined:</td>
-													<td class="tright t600">8.5 l/100 km</td>
-												</tr>
-												<tr>
-													<td scope="row" class="text-black-50">CO2 emissions* combined:</td>
-													<td class="tright t600">192 g/km</td>
+													<td scope="row" class="text-black-50">Ngoài đô thị:</td>
+													<td class="tright t600">5.0 l/100 km</td>
 												</tr>
 											 </tbody>
 										</table>
