--- a/_pages/car/contact.html
+++ b/_pages/car/contact.html
@@ -97,7 +97,7 @@ sitemap: true
 								<img class="card-img-top" src="{{ site.url }}/images/avatar/avata-nguyentronghuynh.com.jpg" alt="Trọng Huỳnh Toyota Thái Hòa Từ Liêm">
 								<div class="card-body">
 									<h4 class="mb-1 color center">ĐƯỜNG DÂY NÓNG 24/24</h4>
-									<h2 class="card-title mb-2"><i class="icon-phone-sign position-relative mr-1 color" style="top: 4px;"></i> <a href="tel:0985629621">0985.629.621</a></h2>
+									<h2 class="card-title mb-2 center"><i class="icon-phone-sign position-relative mr-1 color" style="top: 4px;"></i> <a href="tel:0985629621">0985.629.621</a></h2>
 									<p class="card-text" style="text-align: justify;">Chúng tôi luôn sẵn sàng 24/7. Nhân viên chuyên gia của chúng tôi đang trực để trả lời câu hỏi của bạn. Bạn cũng có thể liên hệ qua email: <a class="btn-link" href="mailto:info@nguyentronghuynh.com">info@nguyentronghuynh.com</a></p>
 								</div>
 							</div>
