--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@ redirect_from:
 	<!-- End feature Area -->
 	
 	<!-- Start brand Area -->
-	<section class="brand-area pt-120">
+	<!--section class="brand-area pt-120">
 		<div class="container">
 			<div class="row align-items-center">
 				<div class="col single-brand">
@@ -240,7 +240,7 @@ redirect_from:
 	<!-- End brand Area -->
 	
 	<!-- Start blog Area -->
-	<section class="blog-area section-gap">
+	<!--section class="blog-area section-gap">
 		<div class="container">
 			<div class="row d-flex justify-content-center">
 				<div class="col-md-12 pb-40 header-text text-center">
