--- a/car.html
+++ b/car.html
@@ -799,7 +799,7 @@ sitemap: true
 							<h2 class="nott t500">Toyota Thái Hòa Từ Liêm<br>Luôn chạm đến trái tim của bạn</h2>
 							<p style="color: #DDD; margin-top: 10px">Toyota Thái Hòa – Từ Liêm luôn nỗ lực làm hài lòng quý khách. Chúng tôi có những chính sách về giá xe hợp lý, các khuyến mại đem lại lợi ích lớn, và các lời khuyên, cố vấn chuyên nghiệp dành cho thủ tục hành chính, bao gồm trả góp và trả thẳng.</p>
 						</div>
-						<a href="demos/car/car-contact.html" class="uppercase t700 ls2" style="color: #FFF; font-size: 12px; border-bottom: 1px solid #FFF">Để lại đánh giá cho Toyota Thái Hòa Từ Liêm</a> &rarr;
+						<a href="{{ site.url }}/car/contact/" class="uppercase t700 ls2" style="color: #FFF; font-size: 12px; border-bottom: 1px solid #FFF">Để lại đánh giá cho Toyota Thái Hòa Từ Liêm</a> &rarr;
 					</div>
 				</div>
 
