--- a/car.html
+++ b/car.html
@@ -618,14 +618,14 @@ sitemap: true
 					<div class="row" style="height: 100%;">
 						<!-- Video 1 -->
 						<div class="col-md-6 col-12 nopadding half-screen dark videoplay-on-hover">
-							<a href="demos/car/car-listing.html">
+							<a href="camry/">
 								<div class="vertical-middle center" style="z-index: 1">
-									<div class="before-heading uppercase ls1" style="font-size: 14px; font-style: normal; color: #EEE">Mercedes</div>
-									<h2 class="nobottommargin ls1">Mercedes-AMG GT</h2>
+									<div class="before-heading uppercase ls1" style="font-size: 14px; font-style: normal; color: #EEE">TOYOTA CAMRY 2019</div>
+									<h2 class="nobottommargin ls1">TOYOTA CAMRY 2019</h2>
 								</div>
 								<div class="video-wrap">
-									<video id="slide-video-1" poster="{{ site.url }}/car/assets/media/videos/1.jpg" preload="auto" loop muted>
-										<source src='{{ site.url }}/car/assets/media/videos/1.mp4' type='video/mp4' />
+									<video id="slide-video-1" poster="{{ site.url }}/car/assets/media/videos/camry_2019.jpg" preload="auto" loop>
+										<source src='{{ site.url }}/car/assets/media/videos/CAMRY_2019.mp4' type='video/mp4' />
 									</video>
 									<div class="video-overlay" style="background: rgba(0,0,0,0.3);"></div>
 								</div>
@@ -633,14 +633,14 @@ sitemap: true
 						</div>
 						<!-- Video 2 -->
 						<div class="col-md-6 col-12 nopadding half-screen dark videoplay-on-hover">
-							<a href="demos/car/car-listing.html">
+							<a href="vios/">
 								<div class="vertical-middle center" style="z-index: 1">
-									<div class="before-heading uppercase ls1" style="font-size: 14px; font-style: normal; color: #EEE">Mercedes</div>
-									<h2 class="nobottommargin ls1">Mercedes-AMG C 63</h2>
+									<div class="before-heading uppercase ls1" style="font-size: 14px; font-style: normal; color: #EEE">TOYOTA VIOS 2019</div>
+									<h2 class="nobottommargin ls1">TOYOTA VIOS 2019</h2>
 								</div>
 								<div class="video-wrap">
-									<video id="slide-video-2" poster="{{ site.url }}/car/assets/media/videos/2.jpg" preload="auto" loop muted>
-										<source src='{{ site.url }}/car/assets/media/videos/2.mp4' type='video/mp4' />
+									<video id="slide-video-2" poster="{{ site.url }}/car/assets/media/videos/vios_2019.jpg" preload="auto" loop>
+										<source src='{{ site.url }}/car/assets/media/videos/VIOS_2019.mp4' type='video/mp4' />
 									</video>
 									<div class="video-overlay" style="background: rgba(0,0,0,0.4);"></div>
 								</div>
