--- a/car.html
+++ b/car.html
@@ -648,14 +648,14 @@ sitemap: true
 						</div>
 						<!-- Video 3 -->
 						<div class="col-md-6 col-12 nopadding half-screen dark videoplay-on-hover">
-							<a href="demos/car/car-listing.html">
+							<a href="corolla-altis/">
 								<div class="vertical-middle center" style="z-index: 1">
-									<div class="before-heading uppercase ls1" style="font-size: 14px; font-style: normal; color: #EEE">BMW Auto</div>
-									<h2 class="nobottommargin ls1">BMW Z4 Roadster</h2>
+									<div class="before-heading uppercase ls1" style="font-size: 14px; font-style: normal; color: #EEE">TOYOTA COROLLA ALTIS 2019</div>
+									<h2 class="nobottommargin ls1">TOYOTA COROLLA ALTIS 2019</h2>
 								</div>
 								<div class="video-wrap">
-									<video id="slide-video-3" poster="{{ site.url }}/car/assets/media/videos/3.jpg" preload="auto" loop muted>
-										<source src='{{ site.url }}/car/assets/media/videos/3.mp4' type='video/mp4' />
+									<video id="slide-video-3" poster="{{ site.url }}/car/assets/media/videos/corolla_altis_2019.jpg" preload="auto" loop>
+										<source src='{{ site.url }}/car/assets/media/videos/COROLLA_ALTIS_2019.mp4' type='video/mp4' />
 									</video>
 									<div class="video-overlay" style="background: rgba(0,0,0,0.4);"></div>
 								</div>
@@ -663,14 +663,14 @@ sitemap: true
 						</div>
 						<!-- Video 4 -->
 						<div class="col-md-6 col-12 nopadding half-screen dark videoplay-on-hover">
-							<a href="demos/car/car-listing.html">
+							<a href="innova/">
 								<div class="vertical-middle center" style="z-index: 1">
-									<div class="before-heading uppercase ls1" style="font-size: 14px; font-style: normal; color: #EEE">Mercedes Benz</div>
-									<h2 class="nobottommargin ls1">Mercedes-COUPÉ GLE 63</h2>
+									<div class="before-heading uppercase ls1" style="font-size: 14px; font-style: normal; color: #EEE">TOYOTA INNOVA 2019</div>
+									<h2 class="nobottommargin ls1">TOYOTA INNOVA 2019</h2>
 								</div>
 								<div class="video-wrap">
-									<video id="slide-video-4" poster="{{ site.url }}/car/assets/media/videos/4.jpg" preload="auto" loop muted>
-										<source src='{{ site.url }}/car/assets/media/videos/4.mp4' type='video/mp4' />
+									<video id="slide-video-4" poster="{{ site.url }}/car/assets/media/videos/innova_2019.jpg" preload="auto" loop>
+										<source src='{{ site.url }}/car/assets/media/videos/INNOVA_2019.mp4' type='video/mp4' />
 									</video>
 									<div class="video-overlay" style="background: rgba(0,0,0,0.3);"></div>
 								</div>
