--- a/_pages/car/list.html
+++ b/_pages/car/list.html
@@ -8,7 +8,8 @@ meta-description: ""
 meta-keywords: ""
 permalink: "car/list/"
 published: true
-sitemap: true
+sitemap: false
+allow_search_engine: false
 ---
 
 
