--- a/_pages/car/accessories.html
+++ b/_pages/car/accessories.html
@@ -8,7 +8,8 @@ meta-description: ""
 meta-keywords: ""
 permalink: "car/accessories/"
 published: true
-sitemap: true
+sitemap: false
+allow_search_engine: false
 ---
 
 
