--- a/_pages/car/blog.html
+++ b/_pages/car/blog.html
@@ -17,26 +17,28 @@ sitemap: true
 			<div class="content-wrap">
 
 				<div class="container">
-					<div class="jumbotron p-4 p-md-5 dark position-relative rounded" style="background: url('{{ site.url }}/car/assets/media/hero-slider/2.jpg') center center / cover;">
+					{% for post in site.categories.hot limit:1 %}
+					<div class="jumbotron p-4 p-md-5 dark position-relative rounded" style="background: url('{{ post.image }}') center center / cover;">
 						<div class="col-md-6 px-0 py-3" style="z-index: 1">
-							<strong class="d-inline-block mb-2 t600 uppercase ls2">World</strong>
-							<h2 class="t600 mb-2">Lexus GS Luxury Tuning with Vossen</h2>
-							<div class="mb-3">Nov 12, 2018</div>
-							<p class="my-4 h6 text-white-50">Multiple lines of text that form the lede, informing new readers quickly and efficiently about what's most interesting in this post's contents.</p>
-							<a href="#" class="button button-rounded button-3d button-white button-light nott ls0 nomargin">Continue reading...</a>
+							<!--strong class="d-inline-block mb-2 t600 uppercase ls2">World</strong-->
+							<h2 class="t600 mb-2">{{ post.title }}</h2>
+							<!--div class="mb-3">Nov 12, 2018</div-->
+							<p class="my-4 h6 text-white-50">{{ post.excerpt }}...</p>
+							<a href="{{ site.url }}{{ post.url }}" class="button button-rounded button-3d button-white button-light nott ls0 nomargin">Xem chi tiết...</a>
 						</div>
 						<div class="video-wrap rounded" style="position: absolute; top: 0; left: 0; height: 100%; z-index: 0">
 							<div class="video-overlay" style="background: rgba(0,0,0,0.5);"></div>
 						</div>
 					</div>
+					{% endfor %}
 					<div class="row">
 						{% for post in site.categories.car-news %}
 						<div class="col-md-4 mb-4">
 							<div class="card shadow-sm">
-								<img class="card-img-top" src="{{ site.url }}/car/assets/media/single/911cars/1.jpg" alt="Card image cap">
+								<img class="card-img-top" src="{{ post.image }}" alt="{{ post.title }}">
 								<div class="card-body">
 									<!--strong class="d-inline-block mb-2 text-black-50">{{ post.category }}</strong-->
-									<h4 class="mb-2 t600 uppercase"><a class="text-dark" href="{{ site.url }}{{ post.url }}">{{ post.title }}</a></h4>
+									<h3 class="mb-2 t600" style="font-size: 18px;"><a class="text-dark" href="{{ site.url }}{{ post.url }}">{{ post.title }}</a></h3>
 									<!--a href="#" class="card-link">Auto Expo</a>
 									<a href="#" class="card-link">Nov 12, 2018</a-->
 									<!--p class="card-text my-3">Some quick example text to build on the card title and make up the bulk of the card's content.</p-->
@@ -115,14 +117,14 @@ sitemap: true
 
 					</div-->
 
-					<ul class="pagination mt-1 mb-0 clearfix">
+					<!--ul class="pagination mt-1 mb-0 clearfix">
 						<li class="page-item"><a class="page-link" href="#">&laquo;</a></li>
 						<li class="page-item active"><a class="page-link" href="#">1</a></li>
 						<li class="page-item"><a class="page-link" href="#">2</a></li>
 						<li class="page-item"><a class="page-link" href="#">3</a></li>
 						<li class="page-item"><a class="page-link" href="#">4</a></li>
 						<li class="page-item"><a class="page-link" href="#">&raquo;</a></li>
-					</ul>
+					</ul-->
 				</div>
 
 			</div>
