--- a/_pages/car/blog.html
+++ b/_pages/car/blog.html
@@ -18,12 +18,12 @@ sitemap: true
 
 				<div class="container">
 					{% for post in site.categories.hot limit:1 %}
-					<div class="jumbotron p-4 p-md-5 dark position-relative rounded" style="background: url('{{ post.image }}') center center / cover;">
+					<div class="jumbotron p-4 p-md-5 dark position-relative rounded" style="background: url('{{ site.url }}/{{ post.image }}') center center / cover;">
 						<div class="col-md-6 px-0 py-3" style="z-index: 1">
 							<!--strong class="d-inline-block mb-2 t600 uppercase ls2">World</strong-->
 							<h2 class="t600 mb-2">{{ post.title }}</h2>
 							<!--div class="mb-3">Nov 12, 2018</div-->
-							<p class="my-4 h6 text-white-50">{{ post.excerpt }}...</p>
+							<!--p class="my-4 h6 text-white-50">{{ post.excerpt }}...</p-->
 							<a href="{{ site.url }}{{ post.url }}" class="button button-rounded button-3d button-white button-light nott ls0 nomargin">Xem chi tiết...</a>
 						</div>
 						<div class="video-wrap rounded" style="position: absolute; top: 0; left: 0; height: 100%; z-index: 0">
@@ -35,7 +35,7 @@ sitemap: true
 						{% for post in site.categories.car-news %}
 						<div class="col-md-4 mb-4">
 							<div class="card shadow-sm">
-								<img class="card-img-top" src="{{ post.image }}" alt="{{ post.title }}">
+								<img class="card-img-top" src="{{ site.url }}/{{ post.image }}" alt="{{ post.title }}">
 								<div class="card-body">
 									<!--strong class="d-inline-block mb-2 text-black-50">{{ post.category }}</strong-->
 									<h3 class="mb-2 t600" style="font-size: 18px;"><a class="text-dark" href="{{ site.url }}{{ post.url }}">{{ post.title }}</a></h3>
