--- a/_pages/car/vios.html
+++ b/_pages/car/vios.html
@@ -24,7 +24,7 @@ sitemap: true
 							============================================= -->
 							<div id="section-features" class="page-section">
 							<h3 class="mb-3">ĐÁNH GIÁ XE VIOS 2019 - SÀNH ĐIỆU MỌI GÓC NHÌN</h3>
-								<p>Giá xe Vios 2019 lăn bánh hôm nay là bao nhiêu? Xe Vios 2019 All New khuyến mãi tháng 02/2019 là bao nhiêu? Toyota Vios 2019 có gì mới hay Mua xe Vios trả góp ở đâu? … là những câu hỏi mà chúng tôi sẽ trả lời khách hàng qua bài viết dưới đây? Quý khách có thể liên hệ ngay với chúng tôi đế được tư vấn tốt nhất và nhận giá xe Vios 2019 rẻ nhất cùng khuyến mãi xe Toyota Vios 2019 tốt nhất trong tháng.<br>
+								<p>Giá xe Vios 2019 lăn bánh tại Toyota Thái Hòa hôm nay là bao nhiêu? Xe Vios 2019 All New khuyến mãi tháng 02/2019 là bao nhiêu? Toyota Vios 2019 có gì mới hay Mua xe Vios trả góp ở đâu? … là những câu hỏi mà chúng tôi sẽ trả lời khách hàng qua bài viết dưới đây? Quý khách có thể liên hệ ngay với chúng tôi đế được tư vấn tốt nhất và nhận giá xe Vios 2019 rẻ nhất cùng khuyến mãi xe Toyota Vios 2019 tốt nhất trong tháng.<br>
 								Vios 2019 hoàn toàn đặc biệt và đột phá so với các đối thủ khác, bạn có thể băn khoăn vì chưa biết nên chọn mua sản phẩm xe hơi nào, bạn không biết bản thân mình cần làm gì thì mới lựa chọn được chiếc xe tốt? Rất đơn giản chỉ với Toyota vios mới 2019 mọi thứ sẽ làm bạn ngạc nhiên cho mà xem..!</p>
 								<div class="row clearfix">
 									<div class="col-md-6">
